--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* File: styles.css
  * Author: Sean M
  * Date: 2022-10-11
- * Description: All styles for the site (includes required classes from bootstrap)
+ * Description: Styles not included in Bootstrap
  * License: MIT
  * Version: 1.0
  */
@@ -10,10 +10,11 @@
 
 :root {
     --font-color: #fff;
-    --background: #000;
-    --primary: #0006A0;
-    --primary-h: #000ECC;
-    --primary-c: #fff; 
+    --background: #004566;
+    --primary: #efc11b;
+    --primary-h: #ffd748;
+    --primary-c: #000; 
+    --secondary: #000;
     /* --font-primary: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; */
     --font-primary: 'Trispace', sans-serif;
 }
@@ -37,124 +38,38 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
-/* =================== Sizing and Spacing =================== */
-
-.h-100 { height: 100%!important; }
-
-.mt-5 { margin-top: 3rem!important; }
-.mt-auto { margin-top: auto!important; }
-.me-2 { margin-right: 1rem!important; }
-.mb-0 { margin-bottom: 0!important; }
-.mb-2 { margin-bottom: 1rem!important; }
-
-.py-3 { padding-top: 1rem!important; padding-bottom: 1rem!important; }
-
-/* =================== Typography =================== */
-
-.lead {
-    font-size: 1.25rem;
-    font-weight: 300;
-}
-
-p {
-    margin-bottom: 1rem;
-    text-transform: uppercase;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 0.5rem;
-    font-weight: 500;
-    line-height: 1.2;
-}
-
-h1 { font-size: calc(1.375rem + 1.5vw); }
-h2 { font-size: calc(1.325rem + 0.9vw); }
-h3 { font-size: calc(1.3rem + 0.6vw); }
-h4 { font-size: calc(1.275rem + 0.3vw); }
-h5 { font-size: 1.25rem; }
-h6 { font-size: 1rem; }
-
-/* =================== Containers =================== */
-
-.container {
-    width: 100%;
-    padding-right: 0.75rem;
-    padding-left: 0.75rem;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-@media (min-width: 576px) {
-    .container {
-        max-width: 540px;
-    }
-}
-
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
-}
-
-@media (min-width: 992px) {
-    .container {
-        max-width: 960px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
-    }
-}
-
-/* =================== Flex =================== */
-
-.d-flex { display: flex; }
-.flex-row { flex-direction: row; }
-.flex-column { flex-direction: column; }
-.flex-shrink-0 { flex-shrink: 0; }
-.align-items-center { align-items: center; }
-.justify-content-center { justify-content: center; }
-.justify-content-around { justify-content: space-around; }
-
-/* =================== Grid =================== */
-
-.row {
-    --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: calc(var(--bs-gutter-y) * -1);
-    margin-right: calc(var(--bs-gutter-x)/ -2);
-    margin-left: calc(var(--bs-gutter-x)/ -2);
-}
-
-.row>* {
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 100%;
-    padding-right: calc(var(--bs-gutter-x)/ 2);
-    padding-left: calc(var(--bs-gutter-x)/ 2);
-    margin-top: var(--bs-gutter-y);
-}
-
-.col-12 {
-    flex: 0 0 auto;
-    width: 100%;
-}
-
-@media (min-width: 768px) {
-    .col-md-6 {
-        flex: 0 0 auto;
-        width: 50%;
-    }
-}
-
 /* =================== Main Title =================== */
 
 .main-title h1 {
-    font-size: 54px;
+    font-size: 2rem;
+}
+
+.main-title h6 {
+    margin: 0;
+    font-size: 0.33rem;
+}
+
+@media (min-width: 420px) {
+    .main-title h1 {
+        font-size: 2.5rem;
+    }
+    .main-title h6 {
+        font-size: 0.4rem;
+    }
+}
+
+/* sm media query */
+@media (min-width: 576px) {
+    .main-title h1 {
+        font-size: 3rem;
+    }
+    .main-title h6 {
+        font-size: 0.5rem;
+    }
+}
+
+.section-title {
+    text-transform: uppercase;
 }
 
 /* =================== Socials =================== */
@@ -191,30 +106,16 @@ h6 { font-size: 1rem; }
 /* =================== Buttons =================== */
 
 .btn {
-    display: inline-block;
     font-family: var(--font-primary);
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: center;
-    text-decoration: none;
     text-transform: uppercase;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
     border-radius: 0;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .btn-primary {
     background-color: var(--primary);
     border-color: var(--primary);
     color: var(--primary-c);
+    --bs-btn-hover-color: #000;
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:active:focus {
@@ -231,11 +132,47 @@ h6 { font-size: 1rem; }
     border-radius: 50%; 
 }
 
+.path {
+	stroke-dasharray: 1000 1000;/*615.423095703125;*/
+	stroke-dashoffset: 1000;/*615.423095703125;*/
+	/*animation: dash 5s linear forwards;
+	-webkit-animation: dash 3s linear forwards;*/
+}
+
+.figure {
+	position:relative;
+}
+
+.figure p {
+	position:absolute;
+	top:55px;
+	left:35px;
+	font-size:72px;	
+	margin:0;
+}
+
+.timer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80px;
+}
+
+.timer-value {
+    font-size: 2.5rem;
+}
+
+.timer-label {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
 /* =================== MISC =================== */
 
 /* Background image at top of the page */
 .bg-image {
-    background: url("./assets/bg.jpg");
+    background: linear-gradient(transparent, var(--background)), url(./assets/bg.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -245,5 +182,5 @@ h6 { font-size: 1rem; }
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.3;
+    opacity: 0.5;
 }
