--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,30 @@
 
 /* =================== Variables =================== */
 
+@font-face {
+    font-family: 'Pattanakarn SemiExpanded';
+    src: url(/assets/Pattanakarn-Regular-SemiExpanded.woff2);
+}
+
 :root {
+    --c1: #752cb4;
+    --c2: #171f69;
+    --c3: #d80140;
+    --c4: #55f3fa;
+    --c5: #57053e;
+    --c6: #200f45;
+    --c7: #22595c;
+    --c8: #22c0ef;
+    --c9: #2f1244;
+
     --font-color: #fff;
-    --background: #004566;
-    --primary: #efc11b;
+    --background: #2f1244;
+    --primary: var(--c8);
     --primary-h: #ffd748;
     --primary-c: #000; 
     --secondary: #000;
-    /* --font-primary: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; */
-    --font-primary: 'Trispace', sans-serif;
+    --bs-font-sans-serif: 'Pattanakarn SemiExpanded', sans-serif;
+
 }
 
 /* =================== Global =================== */
@@ -28,7 +43,7 @@
 }
 
 body {
-    font-family: var(--font-primary);
+    font-family: var(--bs-font-sans-serif);
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -42,19 +57,22 @@ body {
 
 .main-title h1 {
     font-size: 2rem;
+    text-shadow: rgb(240 78 35 / 50%) 3px 3px 0px, rgb(240 78 35 / 30%) 6px 6px 0px;
+    text-transform: uppercase;
+    font-weight: bold
 }
 
-.main-title h6 {
-    margin: 0;
-    font-size: 0.33rem;
+.main-title img {
+    width: clamp(100px, 10vw, 200px);
+}
+
+.main-title img:last-child {
+    transform: scale(0.7);
 }
 
 @media (min-width: 420px) {
     .main-title h1 {
         font-size: 2.5rem;
-    }
-    .main-title h6 {
-        font-size: 0.4rem;
     }
 }
 
@@ -62,9 +80,6 @@ body {
 @media (min-width: 576px) {
     .main-title h1 {
         font-size: 3rem;
-    }
-    .main-title h6 {
-        font-size: 0.5rem;
     }
 }
 
@@ -183,4 +198,13 @@ body {
     height: 100%;
     z-index: -1;
     opacity: 0.5;
+}
+.mt-top {
+    margin-top: 5rem;
+}
+.top-img img {
+    width: clamp(80px, 8vw, 200px);
+}
+.sponsors img {
+    max-width: 70%;
 }
