--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@
 
     --font-color: #fff;
     --background: #2f1244;
-    --primary: #22c0ef;
-    --primary-h: #86def9;
+    --primary: #55F3FA;
+    --primary-h: #0da2d1;
     --primary-c: #000; 
     --highlight: #d80140;
     --bs-font-sans-serif: 'Pattanakarn', sans-serif;
